Tests/RunCMake/CMakePresets/PresetNotObject-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/PresetNotObject:
Error: @4,5: Invalid Preset
    \[\]
    \^$
